r600g: bump domain selection up one layer.

this is taken from a patch from Mathias Froehlich, just going to
stage it in a few pieces.

Signed-off-by: Dave Airlie <airlied@redhat.com>
(cherry picked from commit ecc051d65b6e17115439fb3609cccfd59f6272bf, see
https://bugs.freedesktop.org/show_bug.cgi?id=40979)